[gd_scene load_steps=7 format=3 uid="uid://bet56jl07wp1l"]

[ext_resource type="Script" path="res://Menu/Menu.gd" id="1_ig770"]
[ext_resource type="PackedScene" uid="uid://b4t45gnsf7nls" path="res://Menu/credits_page_v2.tscn" id="2_drgbn"]
[ext_resource type="Texture2D" uid="uid://d4evuqfk2rys6" path="res://Menu/images/Logo.png" id="3_6yv82"]
[ext_resource type="Texture2D" uid="uid://10wxo4wktr6j" path="res://Menu/images/Start Game.png" id="4_3d8rd"]
[ext_resource type="Texture2D" uid="uid://cfecck2fwku0u" path="res://Menu/images/credits.png" id="5_kitv6"]
[ext_resource type="Texture2D" uid="uid://b8nd76q4tl03c" path="res://Menu/images/exit.png" id="6_modh6"]

[node name="Menu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig770")
credits_scene = ExtResource("2_drgbn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 14.0
texture = ExtResource("3_6yv82")

[node name="Spacer2" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="CreditsButton" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.5
texture_normal = ExtResource("5_kitv6")
texture_pressed = ExtResource("5_kitv6")
texture_hover = ExtResource("5_kitv6")
ignore_texture_size = true
stretch_mode = 0

[node name="Spacer2" type="Control" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="StartButton" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.75
texture_normal = ExtResource("4_3d8rd")
texture_pressed = ExtResource("4_3d8rd")
texture_hover = ExtResource("4_3d8rd")
ignore_texture_size = true
stretch_mode = 0

[node name="Spacer3" type="Control" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.5

[node name="QuitButton" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
texture_normal = ExtResource("6_modh6")
texture_pressed = ExtResource("6_modh6")
texture_hover = ExtResource("6_modh6")
ignore_texture_size = true
stretch_mode = 0

[node name="Spacer4" type="Control" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
